- rename "cimfile" to "file" - fix API documentation - move /uploads POST endpoint to /files POST - add /files/FileID PUT endpoint for updating files - mark removed and new endpoints in API doc
