# routes/file/fileEndpoints.go
@@ -7,8 +7,8 @@ import (
 
 func FilesRegister(r *gin.RouterGroup) {
 	r.GET("/", filesReadEp)
-	//r.POST("/", fileRegistrationEp) // TODO to be added to API
-	//r.PUT("/:FileID", fileUpdateEp) // TODO to be added to API
+	r.POST("/", fileRegistrationEp) // NEW in API
+	r.PUT("/:FileID", fileUpdateEp) // NEW in API
 	r.GET("/:FileID", fileReadEp)
 	r.DELETE("/:FileID", fileDeleteEp)
 }
@@ -21,19 +21,17 @@ func filesReadEp(c *gin.Context) {
 	})
 }
 
-// TODO to be added to API
-//func fileRegistrationEp(c *gin.Context) {
-//	c.JSON(http.StatusOK, gin.H{
-//		"message": "NOT implemented",
-//	})
-//}
+func fileRegistrationEp(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{
+		"message": "NOT implemented",
+	})
+}
 
-// TODO to be added to API
-//func fileUpdateEp(c *gin.Context) {
-//	c.JSON(http.StatusOK, gin.H{
-//		"message": "NOT implemented",
-//	})
-//}
+func fileUpdateEp(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{
+		"message": "NOT implemented",
+	})
+}
 
 func fileReadEp(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{
